--- a/config/services.yml
+++ b/config/services.yml
@@ -12,8 +12,8 @@ services:
             - '@dbal.conn'
             - '@request'
             - '@template'
+            - '@pagination'
             - '@user'
-            - '@service_container'
             - '@auth'
             - '%core.root_path%'
             - '%core.php_ext%'
