--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,17 @@
 	"license": "GPL-2.0",
 	"authors": [{
 			"name": "David Wood",
-			"username": "david63",
 			"role": "Developer"
 		}],
 	"require": {
-        "php": ">=5.3.3",
+        "php": ">=5.4,<7.1",
+		"phpbb/phpbb": ">=3.2.0-RC1",
         "composer/installers": "~1.0"
     },
 	"extra": {
 		"display-name": "PM monitor",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.2.0-a1"
+			"phpbb/phpbb": ">=3.2.0-RC1"
       }
 	}
 }
